Improvements gained from the OA3302 branch that must be merged with the trunk to maintain Viskit robustness.
git-svn-id: svn+ssh://eos.nps.edu/usr/local/svn/wcm/Viskit/trunk@1946 0de750ab-c0a9-dc11-9d74-0011435b89d6